--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,13 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+main img {
+  width: 250px;
+  height: 250px;
+  float: left;
+}
+
+main img:nth-child(2) {
+  float: right;
+}
